2007-02-26  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindow.java (resetPCAndList): Fixed bug preventing
	window from refreshing properly after a step.
	* disassembler/DisassemblyWindow.java (resetPCAndList): Ditto.

2007-02-26  Sami Wagiaalla  <swagiaal@redhat.com>

	* gladedir/procpop.glade: Removed statusVPaned, used a VBox instead
	Added proper spacing to the VBox.
	Added 6 pixel border to statusWidget.
	
2007-02-26  Tim Moore  <timoore@redhat.com>

	* Gui.java (setupCoreLogging): Get frysk logger from LogManager,
	handler from EventHandler.

2007-02-23  Mike Cvet  <mcvet@redhat.com>

	* gladedir/frysk_source.glade: Changed sizing settings.

2007-02-22  Mike Cvet  <mcvet@redhat.com>

	* druid/CreateFryskSessionDruid.java (debugButton.buttonEvent):
	Fixed a TreeView selection bug.

2007-02-21  Mike Cvet  <mcvet@redhat.com>

	* druid/CreateFryskSessionDruid.java (addedProcsTreeView): 
	Changed from a ListView to a ProcWiseTreeView. Fixes
	#4010.
	(procMap): Added. Keeps track of DebugProcesses belonging
	to certain GuiProcs.
	(addProcessParent): Add DebugProcess to procMap.
	(getProcessSelectionControls): Explicitly call
	ProcWiseTreeView.setFilter(). Initialize new addedProcsTreeView.
	Get DebugProcesses from procMap.
	(finishButton.buttonEvent): Clear procMap.
	(attachLinkedListsToWidgets): Remove call to watchGuiProcs for
	addedProcsTreeView.
	* gladedir/frysk_create_session_druid.glade: Resized treeviews.

2007-02-14  Mike Cvet  <mcvet@redhat.com>

	* druid/CreateFryskSessionDruid.java (getDruidStructureControls):
	Added some code to check the left-hand tree for selections even if
	the right hand-side was empty. Fixes #4038.

2007-02-09  Mike Cvet  <mcvet@redhat.com>

	* disassembler/DisassemblyWindow.java (resetTask): Removed redundant 
	Disassembler initialization.
	* memory/MemoryWindow.java (resetTask): Ditto.

2007-02-08  sami wagiaalla  <swagiaal@redhat.com>

	* test/dogtail_scripts/credits.py: changed logWriter.writeResult