@@ -1,3 +1,8 @@
+2007-02-27  Mike Cvet  <mcvet@redhat.com>
+
+	* disassembler/DisassemblyWindow.java (handleToSpin): Used TreePath
+	to reverse-iterate back up the ListStore. Fixes #3464.
+
 2007-02-26  Mike Cvet  <mcvet@redhat.com>
 
 	* memory/MemoryWindow.java (resetPCAndList): Fixed bug preventing
